# aestimo_Schrodinger

./: adatabase.py  aestimo.py  aestimo_database.py  config.py  pyproject.toml  setup.py
aestimo.egg-info/: PKG-INFO  SOURCES.txt
scripts/: AlAsGaAs_GammaX.py  Pockels_with_AlOx.py
src/aestimo/: aestimo.py  aestimo_database.py  database.py
tutorials/: Aestimo_Tutorial1.py  Aestimo_Tutorial2.py
