[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aestimo"
version = "2.0.1"
authors = [
  { name="Sefer Bora Lisesivdin"} ,{name="Wilfried"}
]
description = "QW calculations"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/sblisesivdin"
Issues = "https://github.com/pypa/sampleproject/issues"